package com.coreservice.api.dto;

public record ResourceResponse(
        String id,
        String name,
        String description
) {}

